--- a/thesis/formal/formal.tex
+++ b/thesis/formal/formal.tex
@@ -1,5 +1,5 @@
 \input{formal/syms}
-\chapter{Formal Holmes}
+\chapter{Holmes Specification}
 \label{chap:formal}
 Holmes differs from base Datalog in callbacks (analogous to external predicates), aggregates, circumscription, and call/cc.
 External predicates already have a well understood semantics, and we will model callbacks as interpreted functions by extension of our Herbrand universe during instantiation (\S \ref{formal:sec:callbacks}).
@@ -13,13 +13,14 @@ Finally, I will give semantics for the Herbrand instantiation of a Holmes progra
 \section{Negation}
 \label{formal:sec:negation}
 \subsection{Other forms of Negation}
+\label{formal:sec:otherneg}
 The first primary distinction to draw in negation is ``strong negation'' vs ``negation-as-failure'', or NaF.
 Strong negation describes having knowledge that something is not the case, whereas NaF describes knowing that we will never have proof that something is the case.
 This difference is more formally defined by Gelfond and Lifshitz~\cite{strongneg}, where strong negation is referred to as classical negation.
 In this work we will focus on negation-as-failure.
 
 One way of interpreting negation is ``stable-set'' semantics~\cite{stablemodel}.
-In stable-set semantics, to check a whether a proposed model is a stable set, we first take the reduct of the logic program under the proposed model.
+In stable-set semantics, to check whether a proposed model is a stable set, we first take the reduct of the logic program under the proposed model.
 To do this, we remove all negated body clauses which are not present in the proposed model (and so are satisfied), and then remove all rules which still have negated clauses in them (which were not satisfied).
 If the model is the minimal model of this reduct (this new reduced program), then it is a stable set, or stable model of the program.
 This interpretation admits an arbitrary number of potential stable models, including none.
@@ -27,12 +28,12 @@ This interpretation admits an arbitrary number of potential stable models, inclu
 Another approach is known as ``well-founded negation''~\cite{wellfounded}.
 This approach constructs what it calls ``unfounded sets'', which are sets of values which, relative to a given partial interpretation, can never be proven.
 It then augments the partial interpretation with the negation of the unfounded set, and constructs a new minimal model, treating negated clauses as only true if explicitly present in the new partial interpretation.
-This procedure is run unto fixpoint, and produces exactly one well-founded partial model, which will be a subset of all stable models~\cite{wellfounded}.
+This procedure is run until it reaches a fixpoint, and produces exactly one well-founded partial model, which will be a subset of all stable models~\cite{wellfounded}.
 
-In our case, stable-set semantics leaves something to be desired due to the potential for no model, and the well-founded approach may return partial solutions.
+In our case, stable-set semantics leaves something to be desired due to the potential for no model, and the well-founded approach may return partial solutions if there is no stable set or multiple stable sets.
 \subsection{Negation in Holmes}
 Traditional Datalog consists only of a head clause, implied by a series of body clauses.
-To this, we allow clauses to be optionally negated.
+In addition to this, we allow clauses to be optionally negated.
 In the original input program, the head clause may not be negated.
 
 As we have no function symbols or interpreted functions, we define a Herbrand universe $\hu$ which is simply the set of constants in the program.
@@ -170,9 +171,9 @@ Since $\Pi_0 \leq \Pi_3$, we can additionally say that the above formula is poss
 
 \subsubsection{call/cc}
 Adding the assume-true rule is what differentiates our negation model.
-This rule only allows the assumption of truth if assuming false would either make the world inconsistent immediately, or make it impossible to provide a consistent assignment to the remainder of the facts given that assumption.
-By adding assume-true, we allow a consistent solution in the presence of negation in some cases it would not otherwise be possible.
-By restricting it to those cases where assuming falsehood would result in a forced inconsistency in any complete model, we still rule out trivial solutions like setting everything true, but in a looser way than the minimal model over the reduct.
+This rule allows the addition of positive assumptions (e.g. assuming $p$ as opposed to only being able to assume $\neg p$).
+We specifically restrict this rule so that it can only be used if $p$ is not decided, and $\neg p$ would prevent a complete, consistent truth assignment to predicates.
+By restricting assume-true we still rule out trivial solutions like setting everything true, but in a looser way than the minimal model over the reduct (\S~\ref{formal:sec:otherneg})
 It is looser because it allows for models which are not minimal over the reduct, as when assume-true is used, it adds a true proposition which has no derivation from the rules, and so would not be present in any minimal model.
 As assume-true is only allowed in cases where assume-false would lead to no solution, it still prohibits the trivial solution (all predicates are in the model).
 
@@ -215,7 +216,9 @@ This simple example shows the differences between the approaches.
 In the face of this kind of uncertainty, stable-set semantics will choose not to give an answer, well-founded semantics will not decide either way, and circumscriptive semantics will make concessions to return a consistent complete answer. 
 
 In Holmes, circumscription corresponds to a potentially-infinite variety of assume-false in which every version of a specific aggregate greater than the proposed circumscription is negated.
-call/cc corresponds to assume-true, but is a bit more complex, since it needs to discern at least one specific assumption from the infinite negation arm which is untenable.
+call/cc corresponds to assume-true, but is a bit more complex.
+With finite assume-false, the assume-true rule can assert as true the undecided predicate for which assume-false failed.
+Since circumscription assumes false for many predicates, call/cc must select a specific predicate amongst those which has itself given rise to a contradiction to assert as true.
 
 \section{Herbrandization}
 \label{formal:sec:herbrand}
@@ -245,7 +248,7 @@ We then combine these stages:
 The Herbrand base $\hb$ is constructed in the usual way, instantiating each predicate at every value of $\hu$.
 
 \subsection{Program Instantiation}
-For predicates which have aggregation, rewrite them as rules with interpreted functions.
+For predicates which have aggregation (\S~\ref{holmes:sec:agg}), rewrite them as rules with interpreted functions.
 If we have
 \[
 	P(\tau_0 \cdots \tau_m, \sigma_0\wedge j_0 \cdots \sigma_n \wedge j_n)
@@ -254,14 +257,29 @@ then we create a new function
 \[
 	j(a_0 \cdots a_n, b_0 \cdots b_n) = \{c_0 = j_0(a_0, b_0) \cdots c_n = j_n(a_n, b_n)\}
 \]
-and add the rule
+and add the rule (\S~\ref{holmes:sec:callback})
 \[
 	P(x_0 \cdots x_m, c_0 \cdots c_n) \leftarrow P(x_0 \cdots x_m, a_0 \cdots a_n), P(x_0 \cdots x_m, b_0 \cdots b_n) + j
 \]
 where $+ j$ as in the informal Holmes description means to attach the function $j$ to run after the match to generate a set of assignments to variables in the head clause not bound by the body.
-For each aggregated predicate, introduce a circumscripted version of the predicate, $P_c$.
-Perform simple replacement of all circumscripted matches to $P$ with matches against $P_c$.
 
+We define a partial ordering over facts in aggregate predicates based on the lattices used to combine their fields.
+For a predicate $P$ defined as above, and
+\[
+	P_a = P(x_0 \cdots x_m, y_0 \cdots y_n)
+	P_b = P(x_0 \cdots x_m, z_0 \cdots z_n)
+\]
+\[
+	P_a \leq P_b \leftrightarrow \bigwedge_{i = 0}^n y_i \leq z_i
+\]
+where the partial order for each aggregate field with index $i$ is defined by the lattice defined by the join operator $j_i$.
+If the first $m$ fields do not match, there is no ordering.
+
+For each aggregated predicate $P$, introduce an additional predicate $P_c$ with the same field types.
+$P_c$ will act as a concrete representation that $P$ at the same fields as $P_c$ would be a maximum on the ordering we defined.
+Essentially, it says that if $P_c(\vec{x}, \vec{y})$, then if $P(\vec{a}, \vec{b})$ is true, $P(\vec{a}, \vec{b}) \leq P(\vec{x}, \vec{y})$, or there is no ordering between them.
+
+Perform simple replacement of all circumscripted matches to $P$ with matches against $P_c$.
 Now, the program looks like normal Datalog but with functions attached to some rules.
 For every element of the Herbrand universe, instantiate the rule, run the function concretely on the variables bound in the body clause, and instantiate the head term.
 This will result in a rules of the form
@@ -285,8 +303,7 @@ This is a partitioning of $\circset(\Pi)$.
 Let $\decirc{\Pi}{c}$ where $c \in \circset(\Pi)$ be the non-circumscribed version of the fact, e.g. if $c$ corresponds to $P_c(x_0 \cdots x_n)$, then $\decirc{\Pi}{c} \in \hb$ corresponds to $P(x_0 \cdots x_n)$.
 
 Let $\viol{\Pi}{c} \subseteq \hb$ be those predicates which are \emph{directly} negated by the circumscription.
-This contains all of those values belonging to the same aggregate which are not less than or equal to the circumscription.
-
+This contains all of those values belonging to the same aggregate which are not less than or equal to the circumscription under the ordering defined previously.
 
 Much of this is similar to the simple negation semantics, but I restate it here for clarity.
 
@@ -330,7 +347,7 @@ The circ rule is analogous to assume-false because adding $c$ to $\Pi$ is essent
 For call/cc, let $\Pi_c$ be $\Pi$, but modified so that $\viol{\Pi}{c} = \emptyset$ and $c$ is unioned in.
 In other words, $\Pi_c$ is $\Pi \cup c$, but will ignore inconsistencies which are based on the addition of $c$.
 \[\small
-	\infer[\textrm{call/cc}]{\Pi \stepass_a \Pi \cup p}{\Pi \not \decides a & \world{\Pi_c} & \not \exists c'. \Pi \stepass_a \Pi' \cup c' & \not \exists p' \in \viol{\Pi}{c}. \Pi \models p' & p \in \viol{\Pi}{c} & \Pi_c \models \dia p}
+	\infer[\textrm{call/cc}]{\Pi \stepass_a \Pi \cup p}{\Pi \not \decides a & \world{\Pi \cup p} & \not \exists c'. \Pi \stepass_a \Pi' \cup c' & \not \exists p' \in \viol{\Pi}{c}. \Pi \models p' & p \in \viol{\Pi}{c} & \Pi_c \models \dia p}
 \]
 This rule says that if we cannot construct $\stepass_a$ using the circ rule, but $\Pi_c$ would extend the aggregate $a$ with new information, then we can extend $a$ with the new information even though the proposed circumscription would not result in a world.
 The call/cc rule is analogous to the assume-true rule.
