--- a/thesis/alias/example.tex
+++ b/thesis/alias/example.tex
@@ -40,7 +40,7 @@ caption={Annotated Flow-Insensitive Analysis},
 label=lst:example-asm]{alias/example-annotated.asm}
 
 We show the corresponding assembly, annotated with comments on the location of the UaF and alias sets, in Listing~\ref{lst:example-asm}.
-Portions of the alias set hilighted in green are new bindings.
+Portions of the alias set highlighted in green are new bindings.
 Portions in blue are bindings which have been destructively updated.
 In the example, the variables are:
 \begin{itemize}
