--- a/thesis/formal/formal.tex
+++ b/thesis/formal/formal.tex
@@ -129,7 +129,7 @@ Conceptually, this means that there exists an allowed choice of assumptions so t
 Consider the program we herbrandized previously, extended with the initial EDB $\{r\}$, calling the initial program $\Pi_0$.
 Initially, we have that $\Pi_0 \models r$
 We cannot derive any more from $\Pi_0$ because $r$ is not sufficient to invoke any rule through m.p.
-We proceed by considering a candiate world $\Pi_1 = \Pi_0 \cup \{\neg u \leftarrow\}$.
+We proceed by considering a candidate world $\Pi_1 = \Pi_0 \cup \{\neg u \leftarrow\}$.
 Through iterative application of m.p. we get
 \[
 \Pi_1 \models r \wedge \neg u \wedge t \wedge s
