--- a/thesis/formal/syms.tex
+++ b/thesis/formal/syms.tex
@@ -6,7 +6,7 @@
 %\newcommand{\nfi}[2]{{#1} \triangleleft^? {#2}}
 \newcommand{\world}[1]{W({#1})}
 \newcommand{\stepass}{\leadsto}
-\newcommand{\circset}{R}
+\newcommand{\circset}{K}
 \newcommand{\aggset}{A}
 \newcommand{\decirc}[2]{D(#1, #2)}
 \newcommand{\viol}[2]{V(#1, #2)}
